--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest-enzyme": "^7.0.1",
+    "polished": "^2.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-lazyload": "^2.3.0",
